--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "handlebars": "^4.7.8",
+    "joi": "^17.11.0",
     "knex": "^3.0.1",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
